--- a/Web Luz.html
+++ b/Web Luz.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-        <meta charset="UTF-8">
-        <title> MI WEB LUZ CARDENAS</title>
+<meta charset="UTF-8">
+<meta name-"viewport" content-"width-devicewidth,initial-scale-1-0">
+  <title> MI WEB LUZ CARDENAS</title>
         <link rel="stylesheet", type="text/css", href="luzcardenas.css">
     </head>
 <body id="cuerpo">
-    <h1>FARMACIA Y DROGUERIA D¨LUZ </h1>
-    <p> MEDICAMENTOS </p>
-    <p>RECARGAS</p>
-    <p>PAPELERIA<p>
-    <p>PERFUMERIA<p> 
+    <h1>FARMACIA Y DROGUERIA D´LUZ </h1>
+    <p> MEDICAMENTOS  INYECTOLOGIA </p>
+    <p>RECARGAS Y MINUTOS</p>
+    <p>PAPELERIA  Y CACHARRERIA<p>
+    <p>PERFUMERIA Y BISUTERIA<p> 
+<img src=" https://st3.depositphotos.com/2343527/12620/v/450/depositphotos_126206674-stock-illustration-pharmacist-woman-with-medicine-at.jpg" alt="FARMACIA MOSTRADOR" />
+    <h3>📋 Lista de Medicamentos</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Medicamento</th>
+          <th>Cantidad</th>
+          <th>Concentración</th>
+          <th>Forma</th>
+          <th>Valor Compra</th>
+          <th>Valor Venta</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Acetaminofén</td>
+          <td>100</td>
+          <td>500mg</td>
+          <td>Tableta</td>
+          <td>$200</td>
+          <td>$350</td>
+        </tr>
+        <tr>
+          <td>Amoxicilina</td>
+          <td>50</td>
+          <td>250mg</td>
+          <td>Cápsula</td>
+          <td>$400</td>
+          <td>$650</td>
+        </tr>
+        <!-- Puedes seguir agregando más según el abecedario -->
+      </tbody>
+    </table>
+  </section></h2>
         
-<img src=" https://st3.depositphotos.com/2343527/12620/v/450/depositphotos_126206674-stock-illustration-pharmacist-woman-with-medicine-at.jpgalt="" />img
+
 <p>Dirección: Calle 65 No. 11-39</p>
     <p>Teléfono: (057) 3143182803</p>
     <p>Email: luuzcardena@gmail.com
